--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "backbone": "^1.3.3",
+    "chart-test": "https://github.com/che603000/chart-test"
+  }
 }
