--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
