--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "2",
+    "backbone": "^1.3.3",
+    "bootstrap-css": "^3.3.6"
+  }
 }
