--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,11 @@
   "dependencies": {
     "jquery": "2",
     "backbone": "^1.3.3",
-    "bootstrap-css": "^3.3.6"
+    "bootstrap-css": "^3.3.6",
+    "leaflet": "^0.7.7",
+    "Leaflet.Geodesic": "https://raw.githubusercontent.com/henrythasler/Leaflet.Geodesic/master/Leaflet.Geodesic.js",
+    "src": "https://github.com/ardhi/Leaflet.MousePosition/tree/master/src/",
+    "leaflet.mouseposition": "^0.1.0",
+    "webix": "^3.4.0"
   }
 }
